--- a/locale/es_ES.po
+++ b/locale/es_ES.po
@@ -18,145 +18,13 @@ msgstr ""
 "Falta la cuenta de ingresos par el producto \"%(product)s\" de la linea de "
 "contracto \"%(contract_line)s\"."
 
-msgctxt "error:contract.line:"
-msgid "Line \"%(line)s\" is outside its contract \"%(contract)s\" period"
-msgstr "La línea \"%(line)s\" esta fuera del período de su contrato \"%(contract)s\"."
-
-msgctxt "error:contract.service:"
-msgid "Invalid \"By Day\" in recurrence rule \"%s\""
-msgstr "El campo \"por dia\" de la regla de recurrencia \"%s\" no es correcto."
-
-msgctxt "error:contract.service:"
-msgid "Invalid \"By Hour\" in recurrence rule \"%s\""
-msgstr "El campo \"por hora\" de la regla de recurrencia \"%s\" no es correcto."
-
-msgctxt "error:contract.service:"
-msgid "Invalid \"By Minute\" in recurrence rule \"%s\""
-msgstr "El campo \"por minuto\" de la regla de recurrencia \"%s\" no es correcto."
-
-msgctxt "error:contract.service:"
-msgid "Invalid \"By Month Day\" in recurrence rule \"%s\""
-msgstr ""
-"El campo \"por día del mes\" de la regla de recurrencia \"%s\" no es "
-"correcto."
-
-msgctxt "error:contract.service:"
-msgid "Invalid \"By Month\" in recurrence rule \"%s\""
-msgstr "El campo \"por mes\" de la regla de recurrencia \"%s\" no es correcto."
-
-msgctxt "error:contract.service:"
-msgid "Invalid \"By Position\" in recurrence rule \"%s\""
-msgstr "El campo \"por ubicación\" de la regla de recurrencia \"%s\" no es correcto."
-
-msgctxt "error:contract.service:"
-msgid "Invalid \"By Second\" in recurrence rule \"%s\""
-msgstr "El campo \"por segundo\" de la regla de recurrencia \"%s\" no es correcto."
-
-msgctxt "error:contract.service:"
-msgid "Invalid \"By Week Number\" in recurrence rule \"%s\""
-msgstr ""
-"El campo \"por número de la semana\" de la regla de recurrencia \"%s\" no es"
-" correcto."
-
-msgctxt "error:contract.service:"
-msgid "Invalid \"By Year Day\" in recurrence rule \"%s\""
-msgstr ""
-"El campo \"por día del año\" de la regla de recurrencia \"%s\" no es "
-"correcto."
-
-msgctxt "error:contract.service:"
-msgid "Only one of \"until\" and \"count\" can be set."
-msgstr "Define un \"hasta\" y un \"contador\"."
-
 msgctxt "error:contract:"
-msgid "Invalid \"By Day\" in recurrence rule \"%s\""
-msgstr "El campo \"por dia\" de la regla de recurrencia \"%s\" no es correcto."
-
-msgctxt "error:contract:"
-msgid "Invalid \"By Hour\" in recurrence rule \"%s\""
-msgstr "El campo \"por hora\" de la regla de recurrencia \"%s\" no es correcto."
-
-msgctxt "error:contract:"
-msgid "Invalid \"By Minute\" in recurrence rule \"%s\""
-msgstr "El campo \"por minuto\" de la regla de recurrencia \"%s\" no es correcto."
-
-msgctxt "error:contract:"
-msgid "Invalid \"By Month Day\" in recurrence rule \"%s\""
-msgstr ""
-"El campo \"por día del mes\" de la regla de recurrencia \"%s\" no es "
-"correcto."
-
-msgctxt "error:contract:"
-msgid "Invalid \"By Month\" in recurrence rule \"%s\""
-msgstr "El campo \"por mes\" de la regla de recurrencia \"%s\" no es correcto."
-
-msgctxt "error:contract:"
-msgid "Invalid \"By Position\" in recurrence rule \"%s\""
-msgstr "El campo \"por ubicación\" de la regla de recurrencia \"%s\" no es correcto."
-
-msgctxt "error:contract:"
-msgid "Invalid \"By Second\" in recurrence rule \"%s\""
-msgstr "El campo \"por segundo\" de la regla de recurrencia \"%s\" no es correcto."
-
-msgctxt "error:contract:"
-msgid "Invalid \"By Week Number\" in recurrence rule \"%s\""
-msgstr ""
-"El campo \"por número de la semana\" de la regla de recurrencia \"%s\" no es"
-" correcto."
-
-msgctxt "error:contract:"
-msgid "Invalid \"By Year Day\" in recurrence rule \"%s\""
-msgstr ""
-"El campo \"por día del año\" de la regla de recurrencia \"%s\" no es "
-"correcto."
-
-msgctxt "error:contract:"
-msgid "Only one of \"until\" and \"count\" can be set."
-msgstr "Define un \"hasta\" y un \"contador\"."
-
-msgctxt "field:contract,byday:"
-msgid "By Day"
-msgstr "Por día"
-
-msgctxt "field:contract,byhour:"
-msgid "By Hour"
-msgstr "Por hora"
-
-msgctxt "field:contract,byminute:"
-msgid "By Minute"
-msgstr "Por minuto"
-
-msgctxt "field:contract,bymonth:"
-msgid "By Month"
-msgstr "Por mes"
-
-msgctxt "field:contract,bymonthday:"
-msgid "By Month Day"
-msgstr "Por día del mes"
-
-msgctxt "field:contract,bysecond:"
-msgid "By Second"
-msgstr "Por segundo"
-
-msgctxt "field:contract,bysetpos:"
-msgid "By Position"
-msgstr "Por ubicación"
-
-msgctxt "field:contract,byweekno:"
-msgid "By Week Number"
-msgstr "Por número de la semana"
-
-msgctxt "field:contract,byyearday:"
-msgid "By Year Day"
-msgstr "Por día del año"
+msgid "Contract %(contract)s with invalid date \"%(date)s\""
+msgstr "El contracto %(contract)s tiene fecha de comienzo inválida \"%(date)s\""
 
 msgctxt "field:contract,company:"
 msgid "Company"
 msgstr "Empresa"
-
-msgctxt "field:contract,count:"
-msgid "Count"
-msgstr "Contador"
 
 msgctxt "field:contract,create_date:"
 msgid "Create Date"
@@ -210,21 +78,13 @@ msgctxt "field:contract,start_date:"
 msgid "Start Date"
 msgstr "Fecha inicial"
 
+msgctxt "field:contract,start_period_date:"
+msgid "Start Period Date"
+msgstr "Fecha inicio de período"
+
 msgctxt "field:contract,state:"
 msgid "State"
 msgstr "Estado"
-
-msgctxt "field:contract,until:"
-msgid "Until Date"
-msgstr "Hasta la fecha"
-
-msgctxt "field:contract,until_date:"
-msgid "Is Date"
-msgstr "Es una fecha"
-
-msgctxt "field:contract,wkst:"
-msgid "Week Day"
-msgstr "Día de la semana"
 
 msgctxt "field:contract,write_date:"
 msgid "Write Date"
@@ -278,9 +138,17 @@ msgctxt "field:contract.consumption,end_date:"
 msgid "End Date"
 msgstr "Fecha finalización"
 
+msgctxt "field:contract.consumption,end_period_date:"
+msgid "Finish Period Date"
+msgstr "Fecha final de período"
+
 msgctxt "field:contract.consumption,id:"
 msgid "ID"
 msgstr "ID"
+
+msgctxt "field:contract.consumption,init_period_date:"
+msgid "Start Period Date"
+msgstr "Fecha inicio de período"
 
 msgctxt "field:contract.consumption,invoice_date:"
 msgid "Invoice Date"
@@ -330,15 +198,15 @@ msgctxt "field:contract.line,description:"
 msgid "Description"
 msgstr "Descripción"
 
-msgctxt "field:contract.line,end_date:"
-msgid "End Date"
-msgstr "Fecha final"
-
 msgctxt "field:contract.line,id:"
 msgid "ID"
 msgstr "ID"
 
 msgctxt "field:contract.line,last_consumption_date:"
+msgid "Last Consumption Date"
+msgstr "Fecha último consumo"
+
+msgctxt "field:contract.line,last_consumption_invoice_date:"
 msgid "Last Consumption Date"
 msgstr "Fecha último consumo"
 
@@ -354,14 +222,6 @@ msgctxt "field:contract.line,service:"
 msgid "Service"
 msgstr "Servicios"
 
-msgctxt "field:contract.line,start_date:"
-msgid "Start Date"
-msgstr "Fecha inicial"
-
-msgctxt "field:contract.line,state:"
-msgid "State"
-msgstr "Estado"
-
 msgctxt "field:contract.line,unit_price:"
 msgid "Unit Price"
 msgstr "Precio unidad"
@@ -373,46 +233,6 @@ msgstr "Fecha modificación"
 msgctxt "field:contract.line,write_uid:"
 msgid "Write User"
 msgstr "Usuario modificación"
-
-msgctxt "field:contract.service,byday:"
-msgid "By Day"
-msgstr "Por día"
-
-msgctxt "field:contract.service,byhour:"
-msgid "By Hour"
-msgstr "Por hora"
-
-msgctxt "field:contract.service,byminute:"
-msgid "By Minute"
-msgstr "Por minuto"
-
-msgctxt "field:contract.service,bymonth:"
-msgid "By Month"
-msgstr "Por mes"
-
-msgctxt "field:contract.service,bymonthday:"
-msgid "By Month Day"
-msgstr "Por día del mes"
-
-msgctxt "field:contract.service,bysecond:"
-msgid "By Second"
-msgstr "Por segundo"
-
-msgctxt "field:contract.service,bysetpos:"
-msgid "By Position"
-msgstr "Por ubicación"
-
-msgctxt "field:contract.service,byweekno:"
-msgid "By Week Number"
-msgstr "Por número de la semana"
-
-msgctxt "field:contract.service,byyearday:"
-msgid "By Year Day"
-msgstr "Por día del año"
-
-msgctxt "field:contract.service,count:"
-msgid "Count"
-msgstr "Contador"
 
 msgctxt "field:contract.service,create_date:"
 msgid "Create Date"
@@ -442,18 +262,6 @@ msgctxt "field:contract.service,rec_name:"
 msgid "Name"
 msgstr "Nombre"
 
-msgctxt "field:contract.service,until:"
-msgid "Until Date"
-msgstr "Hasta la fecha"
-
-msgctxt "field:contract.service,until_date:"
-msgid "Is Date"
-msgstr "Es una fecha"
-
-msgctxt "field:contract.service,wkst:"
-msgid "Week Day"
-msgstr "Día de la semana"
-
 msgctxt "field:contract.service,write_date:"
 msgid "Write Date"
 msgstr "Fecha modificación"
@@ -461,14 +269,6 @@ msgstr "Fecha modificación"
 msgctxt "field:contract.service,write_uid:"
 msgid "Write User"
 msgstr "Usuario modificación"
-
-msgctxt "help:contract,until_date:"
-msgid "Ignore time of field \"Until Date\", but handle as date only."
-msgstr "Ignora la hora del campo \"Hasta la fecha\", pero usar como única fecha."
-
-msgctxt "help:contract.service,until_date:"
-msgid "Ignore time of field \"Until Date\", but handle as date only."
-msgstr "Ignora la hora del campo \"Hasta la fecha\", pero usar como única fecha."
 
 msgctxt "model:contract,name:"
 msgid "Contract"
@@ -499,7 +299,7 @@ msgid "Contract"
 msgstr "Contratos"
 
 msgctxt "model:ir.action,name:act_contract_configuration_form"
-msgid "Contract Configuration"
+msgid "Contracts Configuration"
 msgstr "Configuración de contratos"
 
 msgctxt "model:ir.action,name:act_contract_consumption"
@@ -511,7 +311,7 @@ msgid "Contract Line"
 msgstr "Línea de contrato"
 
 msgctxt "model:ir.action,name:act_contract_service"
-msgid "Services"
+msgid "Contract Service"
 msgstr "Servicio de contrato"
 
 msgctxt "model:ir.action,name:wizard_create_consumptions"
@@ -557,7 +357,7 @@ msgid "Contract"
 msgstr "Contrato"
 
 msgctxt "model:ir.ui.menu,name:menu_contract_configuration"
-msgid "Contract Configuration"
+msgid "Contracts Configuration"
 msgstr "Configuración de contratos"
 
 msgctxt "model:ir.ui.menu,name:menu_contract_consumption"
@@ -569,7 +369,7 @@ msgid "Contract"
 msgstr "Contratos"
 
 msgctxt "model:ir.ui.menu,name:menu_contract_service"
-msgid "Services"
+msgid "Contract Service"
 msgstr "Servicio de contrato"
 
 msgctxt "model:ir.ui.menu,name:menu_create_consumptions"
@@ -577,11 +377,11 @@ msgid "Create Consumptions"
 msgstr "Crear consumos"
 
 msgctxt "model:res.group,name:group_contract"
-msgid "Contract User"
+msgid "Contract"
 msgstr "Contratos"
 
 msgctxt "model:res.group,name:group_contract_admin"
-msgid "Contract Administrator"
+msgid "Contract Administration"
 msgstr "Administración de contratos"
 
 msgctxt "selection:contract,freq:"
@@ -589,20 +389,12 @@ msgid "Daily"
 msgstr "Diariamente"
 
 msgctxt "selection:contract,freq:"
-msgid "Hourly"
-msgstr "Cada hora"
-
-msgctxt "selection:contract,freq:"
-msgid "Minutely"
-msgstr "Cada minuto"
-
-msgctxt "selection:contract,freq:"
 msgid "Monthly"
 msgstr "Mensualmente"
 
 msgctxt "selection:contract,freq:"
-msgid "Secondly"
-msgstr "Cada segundo"
+msgid "None"
+msgstr "Ninguno"
 
 msgctxt "selection:contract,freq:"
 msgid "Weekly"
@@ -624,69 +416,17 @@ msgctxt "selection:contract,state:"
 msgid "Validated"
 msgstr "Valido"
 
-msgctxt "selection:contract,wkst:"
-msgid ""
-msgstr ""
-
-msgctxt "selection:contract,wkst:"
-msgid "Friday"
-msgstr "Viernes"
-
-msgctxt "selection:contract,wkst:"
-msgid "Monday"
-msgstr "Lunes"
-
-msgctxt "selection:contract,wkst:"
-msgid "Saturday"
-msgstr "Sábado"
-
-msgctxt "selection:contract,wkst:"
-msgid "Sunday"
-msgstr "Domingo"
-
-msgctxt "selection:contract,wkst:"
-msgid "Thursday"
-msgstr "Jueves"
-
-msgctxt "selection:contract,wkst:"
-msgid "Tuesday"
-msgstr "Martes"
-
-msgctxt "selection:contract,wkst:"
-msgid "Wednesday"
-msgstr "Miércoles"
-
-msgctxt "selection:contract.line,state:"
-msgid "Active"
-msgstr "Activo"
-
-msgctxt "selection:contract.line,state:"
-msgid "Draft"
-msgstr "Borrador"
-
-msgctxt "selection:contract.line,state:"
-msgid "Hold"
-msgstr "En espera"
-
 msgctxt "selection:contract.service,freq:"
 msgid "Daily"
 msgstr "Diariamente"
-
-msgctxt "selection:contract.service,freq:"
-msgid "Hourly"
-msgstr "Cada hora"
-
-msgctxt "selection:contract.service,freq:"
-msgid "Minutely"
-msgstr "Cada minuto"
 
 msgctxt "selection:contract.service,freq:"
 msgid "Monthly"
 msgstr "Mensualmente"
 
 msgctxt "selection:contract.service,freq:"
-msgid "Secondly"
-msgstr "Cada segundo"
+msgid "None"
+msgstr "Ninguno"
 
 msgctxt "selection:contract.service,freq:"
 msgid "Weekly"
@@ -695,38 +435,6 @@ msgstr "Semanalmente"
 msgctxt "selection:contract.service,freq:"
 msgid "Yearly"
 msgstr "Anualmente"
-
-msgctxt "selection:contract.service,wkst:"
-msgid ""
-msgstr ""
-
-msgctxt "selection:contract.service,wkst:"
-msgid "Friday"
-msgstr "Viernes"
-
-msgctxt "selection:contract.service,wkst:"
-msgid "Monday"
-msgstr "Lunes"
-
-msgctxt "selection:contract.service,wkst:"
-msgid "Saturday"
-msgstr "Sábado"
-
-msgctxt "selection:contract.service,wkst:"
-msgid "Sunday"
-msgstr "Domingo"
-
-msgctxt "selection:contract.service,wkst:"
-msgid "Thursday"
-msgstr "Jueves"
-
-msgctxt "selection:contract.service,wkst:"
-msgid "Tuesday"
-msgstr "Martes"
-
-msgctxt "selection:contract.service,wkst:"
-msgid "Wednesday"
-msgstr "Miércoles"
 
 msgctxt "view:contract.configuration:"
 msgid "Contract Configuration"
