Fix internal server error and add missing translations

--- a/locale/es_ES.po
+++ b/locale/es_ES.po
@@ -122,6 +122,10 @@ msgctxt "field:contract.configuration,write_uid:"
 msgid "Write User"
 msgstr "Usuario modificación"
 
+msgctxt "field:contract.consumption,contract:"
+msgid "Contract"
+msgstr "Contrato"
+
 msgctxt "field:contract.consumption,contract_line:"
 msgid "Contract Line"
 msgstr "Línea de contrato"
@@ -182,6 +186,14 @@ msgctxt "field:contract.create_consumptions.start,id:"
 msgid "ID"
 msgstr "ID"
 
+msgctxt "field:contract.create_invoices.start,date:"
+msgid "Date"
+msgstr "Fecha"
+
+msgctxt "field:contract.create_invoices.start,id:"
+msgid "ID"
+msgstr "Identificador"
+
 msgctxt "field:contract.line,contract:"
 msgid "Contract"
 msgstr "Contrato"
@@ -197,6 +209,10 @@ msgstr "Usuario creación"
 msgctxt "field:contract.line,description:"
 msgid "Description"
 msgstr "Descripción"
+
+msgctxt "field:contract.line,end_date:"
+msgid "End Date"
+msgstr "Fecha finalización"
 
 msgctxt "field:contract.line,id:"
 msgid "ID"
@@ -221,6 +237,10 @@ msgstr "Nombre"
 msgctxt "field:contract.line,service:"
 msgid "Service"
 msgstr "Servicios"
+
+msgctxt "field:contract.line,start_date:"
+msgid "Start Date"
+msgstr "Fecha inicio"
 
 msgctxt "field:contract.line,unit_price:"
 msgid "Unit Price"
@@ -286,6 +306,10 @@ msgctxt "model:contract.create_consumptions.start,name:"
 msgid "Create Consumptions Start"
 msgstr "Inicio crear consumos"
 
+msgctxt "model:contract.create_invoices.start,name:"
+msgid "Create Invoices Start"
+msgstr "Inicio crear facturas"
+
 msgctxt "model:contract.line,name:"
 msgid "Contract Line"
 msgstr "Línea de contrato"
@@ -317,6 +341,10 @@ msgstr "Servicio de contrato"
 msgctxt "model:ir.action,name:wizard_create_consumptions"
 msgid "Create Consumptions"
 msgstr "Crear consumos"
+
+msgctxt "model:ir.action,name:wizard_create_invoices"
+msgid "Create Invoices"
+msgstr "Crear facturas"
 
 msgctxt ""
 "model:ir.action.act_window.domain,name:act_contract_consumption_domain_all"
@@ -375,6 +403,10 @@ msgstr "Servicio de contrato"
 msgctxt "model:ir.ui.menu,name:menu_create_consumptions"
 msgid "Create Consumptions"
 msgstr "Crear consumos"
+
+msgctxt "model:ir.ui.menu,name:menu_create_invoices"
+msgid "Create Invoices"
+msgstr "Crear facturas"
 
 msgctxt "model:res.group,name:group_contract"
 msgid "Contract"
@@ -456,17 +488,17 @@ msgctxt "view:contract.create_consumptions.start:"
 msgid "Create Contract Consumptions up to"
 msgstr "Crear consumos de contrato hasta la"
 
-msgctxt "view:contract.line:"
-msgid "Active"
-msgstr "Activo"
+msgctxt "view:contract.create_invoices.start:"
+msgid "Create Contract Invoices up to"
+msgstr "Crear contratos hasta "
+
+msgctxt "view:contract.create_invoices.start:"
+msgid "Create Invoices"
+msgstr "Crear facturas"
 
 msgctxt "view:contract.line:"
 msgid "Contract Line"
 msgstr "Línea de contrato"
-
-msgctxt "view:contract.line:"
-msgid "Hold"
-msgstr "En espera"
 
 msgctxt "view:contract.service:"
 msgid "Contract Service"
@@ -500,3 +532,11 @@ msgstr "Aceptar"
 msgctxt "wizard_button:contract.create_consumptions,start,end:"
 msgid "Cancel"
 msgstr "Cancelar"
+
+msgctxt "wizard_button:contract.create_invoices,start,create_invoices:"
+msgid "OK"
+msgstr "Crear"
+
+msgctxt "wizard_button:contract.create_invoices,start,end:"
+msgid "Cancel"
+msgstr "Cancel·lar"
