--- a/locale/ca_ES.po
+++ b/locale/ca_ES.po
@@ -18,6 +18,10 @@ msgstr ""
 "Falta el compte d'ingressos al producte \"%(product)s\" de la línia de "
 "contracte \"%(contract_line)s\"."
 
+msgctxt "error:contract:"
+msgid "Contract %(contract)s with invalid date \"%(date)s\""
+msgstr "El contracte \"%(contract)s\" té dates invàlides \"%(date)s\""
+
 msgctxt "field:contract,company:"
 msgid "Company"
 msgstr "Empresa"
@@ -74,6 +78,10 @@ msgctxt "field:contract,start_date:"
 msgid "Start Date"
 msgstr "Data inici"
 
+msgctxt "field:contract,start_period_date:"
+msgid "Start Period Date"
+msgstr "Data inici període"
+
 msgctxt "field:contract,state:"
 msgid "State"
 msgstr "Estat"
@@ -114,6 +122,10 @@ msgctxt "field:contract.configuration,write_uid:"
 msgid "Write User"
 msgstr "Usuari modificació"
 
+msgctxt "field:contract.consumption,contract:"
+msgid "Contract"
+msgstr "Contracte"
+
 msgctxt "field:contract.consumption,contract_line:"
 msgid "Contract Line"
 msgstr "Línia de contracte"
@@ -130,9 +142,17 @@ msgctxt "field:contract.consumption,end_date:"
 msgid "End Date"
 msgstr "Data finalització"
 
+msgctxt "field:contract.consumption,end_period_date:"
+msgid "Finish Period Date"
+msgstr "Data fi període"
+
 msgctxt "field:contract.consumption,id:"
 msgid "ID"
 msgstr "ID"
+
+msgctxt "field:contract.consumption,init_period_date:"
+msgid "Start Period Date"
+msgstr "Data inici període"
 
 msgctxt "field:contract.consumption,invoice_date:"
 msgid "Invoice Date"
@@ -166,6 +186,14 @@ msgctxt "field:contract.create_consumptions.start,id:"
 msgid "ID"
 msgstr "ID"
 
+msgctxt "field:contract.create_invoices.start,date:"
+msgid "Date"
+msgstr "Data"
+
+msgctxt "field:contract.create_invoices.start,id:"
+msgid "ID"
+msgstr "Identificador"
+
 msgctxt "field:contract.line,contract:"
 msgid "Contract"
 msgstr "Contracte"
@@ -182,11 +210,19 @@ msgctxt "field:contract.line,description:"
 msgid "Description"
 msgstr "Descripció"
 
+msgctxt "field:contract.line,end_date:"
+msgid "End Date"
+msgstr "Data finalització"
+
 msgctxt "field:contract.line,id:"
 msgid "ID"
 msgstr "ID"
 
 msgctxt "field:contract.line,last_consumption_date:"
+msgid "Last Consumption Date"
+msgstr "Última data consum"
+
+msgctxt "field:contract.line,last_consumption_invoice_date:"
 msgid "Last Consumption Date"
 msgstr "Última data consum"
 
@@ -201,6 +237,10 @@ msgstr "Nom"
 msgctxt "field:contract.line,service:"
 msgid "Service"
 msgstr "Serveis"
+
+msgctxt "field:contract.line,start_date:"
+msgid "Start Date"
+msgstr "Data inicial"
 
 msgctxt "field:contract.line,unit_price:"
 msgid "Unit Price"
@@ -266,6 +306,10 @@ msgctxt "model:contract.create_consumptions.start,name:"
 msgid "Create Consumptions Start"
 msgstr "Inici crea consums"
 
+msgctxt "model:contract.create_invoices.start,name:"
+msgid "Create Invoices Start"
+msgstr "Inici crea factures"
+
 msgctxt "model:contract.line,name:"
 msgid "Contract Line"
 msgstr "Línia de contracte"
@@ -297,6 +341,10 @@ msgstr "Servei de contracte"
 msgctxt "model:ir.action,name:wizard_create_consumptions"
 msgid "Create Consumptions"
 msgstr "Crea consums"
+
+msgctxt "model:ir.action,name:wizard_create_invoices"
+msgid "Create Invoices"
+msgstr "Crea factures"
 
 msgctxt ""
 "model:ir.action.act_window.domain,name:act_contract_consumption_domain_all"
@@ -356,6 +404,10 @@ msgctxt "model:ir.ui.menu,name:menu_create_consumptions"
 msgid "Create Consumptions"
 msgstr "Crea consums"
 
+msgctxt "model:ir.ui.menu,name:menu_create_invoices"
+msgid "Create Invoices"
+msgstr "Crea factures"
+
 msgctxt "model:res.group,name:group_contract"
 msgid "Contract"
 msgstr "Contractes"
@@ -371,6 +423,10 @@ msgstr "Diàriament"
 msgctxt "selection:contract,freq:"
 msgid "Monthly"
 msgstr "Mensualment"
+
+msgctxt "selection:contract,freq:"
+msgid "None"
+msgstr "Cap"
 
 msgctxt "selection:contract,freq:"
 msgid "Weekly"
@@ -428,17 +484,17 @@ msgctxt "view:contract.create_consumptions.start:"
 msgid "Create Contract Consumptions up to"
 msgstr "Crea consums dels contractes fins a la "
 
-msgctxt "view:contract.line:"
-msgid "Active"
-msgstr "Actiu"
+msgctxt "view:contract.create_invoices.start:"
+msgid "Create Contract Invoices up to"
+msgstr "Crea contractes fins a"
+
+msgctxt "view:contract.create_invoices.start:"
+msgid "Create Invoices"
+msgstr "Crea factures"
 
 msgctxt "view:contract.line:"
 msgid "Contract Line"
 msgstr "Línia de contracte"
-
-msgctxt "view:contract.line:"
-msgid "Hold"
-msgstr "En espera"
 
 msgctxt "view:contract.service:"
 msgid "Contract Service"
@@ -472,3 +528,11 @@ msgstr "Accepta"
 msgctxt "wizard_button:contract.create_consumptions,start,end:"
 msgid "Cancel"
 msgstr "Cancel·la"
+
+msgctxt "wizard_button:contract.create_invoices,start,create_invoices:"
+msgid "OK"
+msgstr "D'acord"
+
+msgctxt "wizard_button:contract.create_invoices,start,end:"
+msgid "Cancel"
+msgstr "Cancel·lat"
