--- a/locale/ca_ES.po
+++ b/locale/ca_ES.po
@@ -274,6 +274,10 @@ msgctxt "field:contract.service,interval:"
 msgid "Interval"
 msgstr "Interval"
 
+msgctxt "field:contract.service,name:"
+msgid "Name"
+msgstr "Nom"
+
 msgctxt "field:contract.service,product:"
 msgid "Product"
 msgstr "Producte"
@@ -395,6 +399,10 @@ msgstr "Consum de contractes"
 msgctxt "model:ir.ui.menu,name:menu_contract_form"
 msgid "Contract"
 msgstr "Contracte"
+
+msgctxt "model:ir.ui.menu,name:menu_contract_line_form"
+msgid "Contract Line"
+msgstr "Línies"
 
 msgctxt "model:ir.ui.menu,name:menu_contract_service"
 msgid "Contract Service"
