--- a/locale/ca_ES.po
+++ b/locale/ca_ES.po
@@ -346,6 +346,10 @@ msgctxt "model:ir.action,name:act_contract_service"
 msgid "Contract Service"
 msgstr "Servei de contracte"
 
+msgctxt "model:ir.action,name:act_open_contract"
+msgid "Contracts"
+msgstr "Contractes"
+
 msgctxt "model:ir.action,name:wizard_create_consumptions"
 msgid "Create Consumptions"
 msgstr "Crea consums"
