--- a/locale/es_ES.po
+++ b/locale/es_ES.po
@@ -330,6 +330,14 @@ msgctxt "model:contract.service,name:"
 msgid "Contract Service"
 msgstr "Servicio de contrato"
 
+msgctxt "model:ir.action,name:act_consumption_contract_line"
+msgid "Consumptions"
+msgstr "Consumos"
+
+msgctxt "model:ir.action,name:act_consumption_contracts"
+msgid "Consumptions"
+msgstr "Consumos"
+
 msgctxt "model:ir.action,name:act_contract"
 msgid "Contract"
 msgstr "Contratos"
@@ -349,6 +357,10 @@ msgstr "Línea de contrato"
 msgctxt "model:ir.action,name:act_contract_service"
 msgid "Contract Service"
 msgstr "Servicio de contrato"
+
+msgctxt "model:ir.action,name:act_invoices"
+msgid "Invoices"
+msgstr "Facturas"
 
 msgctxt "model:ir.action,name:act_open_contract"
 msgid "Contracts"
