Allow to reinvoice a already invoiced consumptions and take in account credit notes

--- a/locale/ca_ES.po
+++ b/locale/ca_ES.po
@@ -22,6 +22,14 @@ msgstr ""
 "Falta el compte d'ingressos al producte \"%(product)s\" de la línia de "
 "contracte \"%(contract_line)s\"."
 
+msgctxt "field:account.invoice.credit.start,from_contract:"
+msgid "From Contract"
+msgstr "Provinent de contracte"
+
+msgctxt "field:account.invoice.credit.start,reinvoice_contract:"
+msgid "Reinvoice Contract"
+msgstr "Refacturar el contracte"
+
 msgctxt "field:contract,company:"
 msgid "Company"
 msgstr "Empresa"
@@ -134,6 +142,10 @@ msgctxt "field:contract.consumption,create_uid:"
 msgid "Create User"
 msgstr "Usuari creació"
 
+msgctxt "field:contract.consumption,credit_lines:"
+msgid "Credit Lines"
+msgstr "Línies d'abonament"
+
 msgctxt "field:contract.consumption,end_date:"
 msgid "End Date"
 msgstr "Data finalització"
@@ -154,9 +166,9 @@ msgctxt "field:contract.consumption,invoice_date:"
 msgid "Invoice Date"
 msgstr "Data factura"
 
-msgctxt "field:contract.consumption,invoice_line:"
-msgid "Invoice Line"
-msgstr "Línia de factura"
+msgctxt "field:contract.consumption,invoice_lines:"
+msgid "Invoice Lines"
+msgstr "Línies de factura"
 
 msgctxt "field:contract.consumption,rec_name:"
 msgid "Name"
@@ -301,6 +313,12 @@ msgstr "Usuari modificació"
 msgctxt "field:party.party,contract_grouping_method:"
 msgid "Contract Grouping Method"
 msgstr "Mètode d'agrupació de contractes"
+
+msgctxt "help:account.invoice.credit.start,reinvoice_contract:"
+msgid "If true, the consumption that generated this line will be reinvoiced."
+msgstr ""
+"Si es marca, es tornaran a facturar els consums que han generat aquestes "
+"línies de factura."
 
 msgctxt "model:contract,name:"
 msgid "Contract"
@@ -503,6 +521,14 @@ msgstr "Agrupar contractes"
 msgctxt "selection:party.party,contract_grouping_method:"
 msgid "None"
 msgstr "Cap"
+
+msgctxt "view:account.invoice.credit.start:"
+msgid ""
+"Those/this invoice(s) have been generated from contracts, are you sure you "
+"want to credit them?"
+msgstr ""
+"Aquesta(es) factures s'han generat a través de contracte. Esteu segur que "
+"les voleu abonar? "
 
 msgctxt "view:contract.configuration:"
 msgid "Contract Configuration"
