--- a/locale/es_ES.po
+++ b/locale/es_ES.po
@@ -22,6 +22,14 @@ msgstr ""
 "Falta la cuenta de ingresos par el producto \"%(product)s\" de la linea de "
 "contracto \"%(contract_line)s\"."
 
+msgctxt "field:account.invoice.credit.start,from_contract:"
+msgid "From Contract"
+msgstr "Proveniente de contrato"
+
+msgctxt "field:account.invoice.credit.start,reinvoice_contract:"
+msgid "Reinvoice Contract"
+msgstr "Refacturar el contrato"
+
 msgctxt "field:contract,company:"
 msgid "Company"
 msgstr "Empresa"
@@ -134,6 +142,10 @@ msgctxt "field:contract.consumption,create_uid:"
 msgid "Create User"
 msgstr "Usuario creación"
 
+msgctxt "field:contract.consumption,credit_lines:"
+msgid "Credit Lines"
+msgstr "Lineas de abono"
+
 msgctxt "field:contract.consumption,end_date:"
 msgid "End Date"
 msgstr "Fecha finalización"
@@ -154,9 +166,9 @@ msgctxt "field:contract.consumption,invoice_date:"
 msgid "Invoice Date"
 msgstr "Fecha factura"
 
-msgctxt "field:contract.consumption,invoice_line:"
-msgid "Invoice Line"
-msgstr "Línea de factura"
+msgctxt "field:contract.consumption,invoice_lines:"
+msgid "Invoice Lines"
+msgstr "Líneas de factura"
 
 msgctxt "field:contract.consumption,rec_name:"
 msgid "Name"
@@ -301,6 +313,12 @@ msgstr "Usuario modificación"
 msgctxt "field:party.party,contract_grouping_method:"
 msgid "Contract Grouping Method"
 msgstr "Método agrupación contratos"
+
+msgctxt "help:account.invoice.credit.start,reinvoice_contract:"
+msgid "If true, the consumption that generated this line will be reinvoiced."
+msgstr ""
+"Si se marca, el consumo que ha generado estas líneas de contracto será "
+"refacturado."
 
 msgctxt "model:contract,name:"
 msgid "Contract"
@@ -507,6 +525,14 @@ msgstr "Agrupar contratos"
 msgctxt "selection:party.party,contract_grouping_method:"
 msgid "None"
 msgstr "Ninguno"
+
+msgctxt "view:account.invoice.credit.start:"
+msgid ""
+"Those/this invoice(s) have been generated from contracts, are you sure you "
+"want to credit them?"
+msgstr ""
+"Esta factura(s) se ha generado a partir de contratos, estas seguro que las "
+"quieres abonar?"
 
 msgctxt "view:contract.configuration:"
 msgid "Contract Configuration"
