Migrate to version 3.8 (grafted from 9830fd31f3bea55c474e7c36f2a65ff10b4c436f)

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,4 @@
+Version 3.8.0 - 2015-12-09
 * Add sequence on contract lines
 * Make contracts start date and end date functional fields based on lines
 * Improve rec_names of all fields
